Fix: Organisms/ActionBar fix overflow approach (leaving badge and title as long as possible and overflowing other elements)

--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -35,6 +35,10 @@
       overflow: hidden;
     }
 
+    .title {
+      display: flex;
+      overflow: hidden;
+    }
     .align-edit {
       border: 1px solid transparent;
       margin-left: 2px;
@@ -66,7 +70,6 @@
     .badges {
       display: flex;
       color: $charcoal;
-      overflow: hidden;
       padding: auto 5px;
       & > * {
         margin: auto 5px;
